<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context="com.example.tinderlike.LoginActivity">


    <EditText
        android:id="@+id/editText2"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="86dp"
        android:hint="@string/enter_email_address"
        android:textColor="#FFFFFF"
        android:ems="10"
        android:textColorHint="#FFFFFF"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editText2"
        android:layout_marginTop="182dp"
        android:hint="@string/enter_password"
        android:textColor="#FFFFFF"
        android:ems="10"
        android:textColorHint="#FFFFFF"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="355dp"
        android:onClick="login_User"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="183dp"
        android:background="@drawable/myshape"
        android:text="@string/log_in" />
</RelativeLayout>